2001-03-22  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.c (scm_init_storage), gdbint.c (scm_init_gdbint), numbers.c
	(big2str), ports.c (scm_drain_input), read.c (scm_read,
	scm_grow_tok_buf), strings.c (scm_string, scm_makfromstr,
	scm_make_string, scm_string_append), strports.c (st_resize_port,
	scm_object_to_string), unif.c (scm_make_uve):  Replace calls to
	scm_makstr with calls to scm_allocate_string.

	* strings.[ch] (scm_allocate_string):  New function.

	* strings.[ch] (scm_makstr):  Deprecated.

2001-03-18  Gary Houston  <ghouston@arglist.com>

	* posix.c (scm_tmpnam): check that return value from tmpnam is not
	NULL.  rewrote the docstring.
	(scm_mkstemp): new procedure implementing "mkstemp!".
	* posix.h: declare scm_mkstemp.

	* net_db.c: declare h_errno if configure didn't define HAVE_H_ERRNO.
	normally it would be found in netdb.h.

2001-03-17  Gary Houston  <ghouston@arglist.com>

	* sort.c (scm_sort): move sortvec variable to avoid a compiler
	warning	when HAVE_ARRAYS is not defined.  move len too.

	* Makefile.am (DOT_X_FILES): remove net_db.x, posix.x, socket.x.
	(EXTRA_DOT_X_FILES): let configure set the value.
	(DOT_DOC_FILES): remove net_db.doc, posix.doc, socket.doc.

	* gc.c (scm_must_malloc): changed the comment explaining when
	scm_must variants of malloc/free etc., should be used, based on
	explanation from Dirk Herrmann.
	* fports.c (scm_fport_buffer_add): use FUNC_NAME instead of a local
	string with procedure name.  use scm_must_malloc instead of malloc.
	(scm_setvbuf, scm_fdes_to_port, fport_close): use scm_must variants
	of malloc/free.
	* ports.c (scm_add_to_port_table, scm_remove_from_port_table,
	scm_ungetc): use scm_must variants of malloc/realloc/free.
	(scm_add_to_port_table, scm_ungetc): define FUNC_NAME.

2001-03-17  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* __scm.h (SCM_ASSERT, SCM_WTA_DISPATCH_0, SCM_WTA_DISPATCH_1,
	SCM_WTA_DISPATCH_2, SCM_WTA_DISPATCH_n):  Don't call scm_wta, call
	scm_wrong_type_arg instead.
