@@ -104,7 +104,8 @@ SCM_DEFINE (scm_string_index, "string-index", 2, 2, 0,
 	    "@var{str}.  The optional integer arguments @var{frm} and\n"
 	    "@var{to} limit the search to a portion of the string.  This\n"
 	    "procedure essentially implements the @code{index} or\n"
-	    "@code{strchr} functions from the C library.\n (qdocs:) Returns\n"
+	    "@code{strchr} functions from the C library.\n\n"
+            "(qdocs:) Returns\n"
 	    "the index of @var{char} in @var{str}, or @code{#f} if the\n"
 	    "@var{char} isn't in @var{str}. If @var{frm} is given and not\n"
 	    "@code{#f}, it is used as the starting index; if @var{to} is\n"
